--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@ body {
     height: 150px;
     width: 150px;
 }
+
+.selected {
+    border: 4px solid blue;
+}
+
+.match {
+    border: 4px solid red;
+    background-image: none;
+}
