--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ body {
 
 .front {
     z-index: 2;
-    background: #a795ac url('../img/logo.webp') no-repeat center center / contain;
+    background: #a795ac url('img/logo.webp') no-repeat center center / contain;
 }
 
 .back {
